<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".events.EventViewFragment"
             android:id="@+id/container_fragment_event">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <LinearLayout
            android:id="@+id/layout_fragment_event"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_title"
                android:text="Claimant "
                style="@style/TV_Style_Title"/>

            <LinearLayout
                style="@style/LL_Horizontal">
                <TextView
                    android:id="@+id/tv_job_t"
                    android:text="Job Title: "
                    style="@style/TV_Style_Title_Left"/>
                <TextView
                    android:id="@+id/tv_job"
                    style="@style/TV_Style_Content"/>
            </LinearLayout>

            <LinearLayout
                style="@style/LL_Horizontal">
                <TextView
                    android:id="@+id/tv_business_t"
                    android:text="Business: "
                    style="@style/TV_Style_Title_Left"/>
                <TextView
                    android:id="@+id/tv_business"
                    style="@style/TV_Style_Content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_alignParentBottom="true"
                android:gravity="bottom"
                android:baselineAligned="false">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >

                <Button
                    android:id="@+id/accept_button"
                    android:onClick="onClick"
                    android:text="Accept"
                    style="@style/Button"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/reject_button"
                    android:onClick="onClick"
                    android:text="Reject"
                    style="@style/Button"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/message_button"
                    android:onClick="onClick"
                    android:text="Message"
                    style="@style/Button"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            </LinearLayout>
</LinearLayout>
        </RelativeLayout>
    </FrameLayout>
