<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:context=".views.TabFragment">

    <FragmentTabHost
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@android:id/tabhost"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TabWidget
        android:id="@android:id/tabs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tabtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        </TabWidget>

    </LinearLayout>
    <FrameLayout
        android:id="@android:id/tabcontent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    </FragmentTabHost>
</FrameLayout>
