...
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/title"
            style="@style/TV_Style_Title"
            android:text="Congratulations!"

            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
...
